Fixed overlap

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    height: 100vh;
+    /* height: 100vh; */
 }
 .topBar {
     background-color: darkcyan;
@@ -18,11 +18,11 @@
 
 .appArea {
     text-align: center;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .controlArea {
-    height: 40px;
+    height: auto;
 }
 
 .eqTable {
@@ -51,10 +51,7 @@ input[type='number'] {
 
 .PlotArea {
     width: 75%;
-    height: calc(100vh - 80px);
+    /* height: calc(100vh - 80px); */
     margin-left: auto;
     margin-right: auto;
-}
-.Plot {
-    border: 5px solid black;
 }
